test/files/neg/quasiquotes_syntaxerrors_qq6.scala
object Test extends App {
  println(s"${2bar")
  println(s"${foo *")
  println(s"${foo*2bar}")
  println(s"${foo*2bar")
  println(s"${foo*2bar: fmt}")
  println(s"${foo*2bar:fmt")
}